# reolink-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.yaml  fusion.py  osc_monitor.py  region.py  requirements.txt  tracker.py  viewer.py
.codex/skills/sim/: SKILL.md
.codex/skills/sim/scripts/: live_projection_usage.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/scripts/: auto_release.py
.github/workflows/: checks.yml  release.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: main.ts  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
docs/: ai-rules.md  cam2-auxiliary-direction.md  cam2-expansion-direction.md  cam2-low-light-research.md  decisions.md  field-mac-transfer.md  network-topology.md  product.md  release.md  tech.md
touchdesigner/: person_table_receiver.py
